--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Blog
       {% for post in paginator.posts %}
       <div class="list-group-item">
         <div class="row-action-primary">
-          <i class="fa fa-sticky-note"></i>
+          <img src="{{site.baseurl}}{{post.cover}}" alt="">
         </div>
         <div class="row-content">
           <div class="least-content">{{ post.date | date_to_string }}</div>
